--- a/REST_StudentCollege/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/REST_StudentCollege/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -27,6 +27,11 @@
                         <span class='glyphicon glyphicon-th-list'></span> Fetch data
                     </a>
                 </li>
+                <li [routerLinkActive]='["link-active"]'>
+                  <a [routerLink]='["/student-registration"]' (click)='collapse()'>
+                    <span class='glyphicon glyphicon-th-list'></span> Student Registration
+                  </a>
+                </li>
             </ul>
         </div>
     </div>
